--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,18 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+   <form method="POST" action="/team">
+      <h2>Team Name: <input type="text" name="Team Name"></h2>
+      <input type="text" name="Coach">
+      <input type="text" name="Point Guard">
+      <input type="text" name="Shooting Guard:">
+      <input type="text" name="Small Forward:">
+      <input type="text" name="Power Forward:">
+      <input type="text" name="Center:">
+      <input id="submit" type="submit">
+    </form>
+
 
 
  </body>
 </html>
-
-
